Changed some texts

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = dao-scripts
 # version from setuptools_scm (see setup.py)
 author = David Davó
 author_email = ddavo@ucm.es
-description = "A tool to monitor DAO activity"
+description = "A tool to download data to monitor DAO activity"
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Grasia/dao-scripts
@@ -62,7 +62,6 @@ dev =
   flake8
   pandas-vet
   twine
-  pytest
   hypothesis
   pandas-vet
 
