--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ dao_analyzer.cache_scripts =
 [options.entry_points]
 console_scripts =
   dao-scripts = dao_analyzer.cache_scripts.main:main
+  dao-utils-upload-dw = dao_analyzer.cache_scripts.utils.uploadDataWarehouse:main
   daoa-cache-scripts = dao_analyzer.cache_scripts.main:main
 
 [options.extras_require]
