--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,7 @@ console_scripts =
   daoa-cache-scripts = dao_analyzer.cache_scripts.main:main
 
 [options.extras_require]
-docker =
+upload =
   kaggle >= 1.5.12
   zenodo-client >= 0.3.0
 dev =
