--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
   pypi:
     runs-on: ubuntu-latest
     needs: [package]
-    if: github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/' )
     # Specifying a GitHub environment is optional, but strongly encouraged
     permissions:
       # IMPORTANT: this permission is mandatory for trusted publishing
