--- a/.github/workflows/update-datasets.yml
+++ b/.github/workflows/update-datasets.yml
@@ -40,7 +40,7 @@ jobs:
       with:
         python-version: '3.11'
     - name: Install dao-scripts
-      run: pip install dao-scripts[upload]
+      run: pip install 'dao-scripts[upload]>=1.1.14'
     - name: Upload dataset
       run: dao-utils-upload-dw
       env:
