Added patch to zenodo_client

--- a/.github/workflows/update-datasets.yml
+++ b/.github/workflows/update-datasets.yml
@@ -41,6 +41,8 @@ jobs:
         python-version: '3.11'
     - name: Install dao-scripts
       run: pip install 'dao-scripts[upload]>=1.1.14'
+    - name: Patch Zenodo client (provisional)
+      run: find . -wholename '*/zenodo_client/api.py' -exec sed -i 's/_prepare_new_version(new_deposition_data\["metadata"\]\["version"\])/_prepare_new_version(new_deposition_data["metadata"].get("version", ""))/g' {} +
     - name: Upload dataset
       run: dao-utils-upload-dw
       env:
