--- a/.github/workflows/update-datasets.yml
+++ b/.github/workflows/update-datasets.yml
@@ -29,6 +29,9 @@ jobs:
   upload_dw:
     runs-on: ubuntu-latest
     environment: daviddavo
+    strategy:
+      matrix:
+        repo: ["zenodo","kaggle"]
     needs: [update_dw]
     steps:
     - name: Download artifact
@@ -48,7 +51,7 @@ jobs:
         sed -i 's/_prepare_new_version(new_deposition_data\["metadata"\]\["version"\])/_prepare_new_version(new_deposition_data["metadata"].get("version", ""))/g' "$FILE"
         sed -i 's/json=new_deposition_data/json={"metadata": new_deposition_data\["metadata"\]}/g' "$FILE"
     - name: Upload dataset
-      run: dao-utils-upload-dw
+      run: dao-utils-upload-dw ${{matrix.repo}}
       env:
         KAGGLE_USERNAME: ${{ secrets.KAGGLE_USERNAME }}
         KAGGLE_KEY: ${{ secrets.KAGGLE_KEY }}
