--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ classifiers =
 # packages and package_dir in setup.py
 python_requires = >= 3.9
 install_requires =
+  dynaconf >= 3.0.0
   gql >= 3.0.0a1
   numpy >= 1.17.3
   pandas >= 1.3.4
