Pin down kaggle version until kaggle/kaggle-api#611 is fixed

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,8 @@ console_scripts =
 
 [options.extras_require]
 upload =
-  kaggle >= 1.5.12
+  # Pinning down kaggle version until Kaggle/kaggle-api#611 is fixed
+  kaggle >= 1.5.12, <= 1.6.15
   zenodo-client >= 0.3.4
 dev =
   build
