Revert "Pin down kaggle version until kaggle/kaggle-api#611 is fixed"
This reverts commit 1a8bac866641707f7a8292c8eec6509ca95c5ee0.

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,8 +54,7 @@ console_scripts =
 
 [options.extras_require]
 upload =
-  # Pinning down kaggle version until Kaggle/kaggle-api#611 is fixed
-  kaggle >= 1.5.12, <= 1.6.15
+  kaggle >= 1.5.12
   zenodo-client >= 0.3.4
 dev =
   build
