--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ classifiers =
 python_requires = >= 3.9
 install_requires =
   dynaconf >= 3.0.0
-  gql >= 3.0.0a1
+  gql >= 3.0.0a1,<4.0.0
   numpy >= 1.17.3
   pandas >= 1.3.4
   portalocker >= 2.3.2
