Test with Python 3.13
Signed-off-by: David Davó <david@ddavo.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ classifiers =
   Programming Language :: Python :: 3.10
   Programming Language :: Python :: 3.11
   Programming Language :: Python :: 3.12
+  Programming Language :: Python :: 3.13
   Topic :: Sociology
   Typing :: Typed
   Topic :: Utilities
@@ -99,7 +100,7 @@ max-complexity  = 10
 max-line-length = 100
 
 [tox:tox]
-envlist = py{39,310,311,312}
+envlist = py{39,310,311,312,313}
 
 [testenv]
 deps = .[dev]
@@ -120,3 +121,5 @@ python =
   3.9: py39
   3.10: py310
   3.11: py311
+  3.12: py312
+  3.13: py313
